changed travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: generic 
 sudo: required
 servies:
     - docker
@@ -6,10 +7,10 @@ before_install:
     - docker build -t co/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-    - docker run co/react-test npm test -- -- coverage
+    - docker run -e CI=true co/react-test npm test
 after_success:
     - docker build -t co/multi-client ./client
-    - docker build -t co/multi-nginx ./nginx
+    - docker build -t co/multi-nginx  ./nginx
     - docker build -t co/multi-server ./server
     - docker build -t co/multi-worker ./worker
     
