--- a/.travis.yml
+++ b/.travis.yml
@@ -24,12 +24,13 @@ after_success:
     - docker push truongco/multi-worker
 
 deploy:
+    edge: true
     provider: elasticbeanstalk
     region: "us-east-2"
     app: "multi-docker"
     env: "MultiDocker-env"
     bucket_name: "elasticbeanstalk-us-east-2-204280334651"
-    bucket_path: "docker-multi"
+    bucket_path: "multi-docker"
     on:
      branch: master
     access_key_id: $AWS_ACCESS_KEY
