--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ deploy:
     app: "multi-docker"
     env: "MultiDocker-env"
     bucket_name: "elasticbeanstalk-us-east-2-204280334651"
-    bucket_path: "multi-docker"
+    bucket_path: "docker-multi"
     on:
      branch: master
     access_key_id: $AWS_ACCESS_KEY
