--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
     - gcloud config set project multi-k8s-276713
     - gcloud config set compute/zone europe-west1-b
     - gcloud container clusters get-credentials multi-cluster
-    - echo ""$DOCKER_PASSWORD" | dcoker login -u "$DOCKER_USERNAME" --password-stdin
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
     - docker build -t truongco/react-test -f ./client/Dockerfile.dev ./client
 script:
     - docker run -e CI=true truongco/react-test npm run test
